[gd_scene load_steps=2 format=2]

[ext_resource path="res://ScreenShake.gd" type="Script" id=1]

[node name="ScreenShake" type="Node2D"]
script = ExtResource( 1 )

[node name="ShakeTween" type="Tween" parent="."]

[node name="ShakeFrequency" type="Timer" parent="."]

[node name="ShakeDuration" type="Timer" parent="."]
[connection signal="timeout" from="ShakeFrequency" to="." method="_on_ShakeFrequency_timeout"]
[connection signal="timeout" from="ShakeDuration" to="." method="_on_ShareDuration_timeout"]
